<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="226dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/android" />

    <TextView
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/kullanici_girisi"
        android:textAppearance="?android:attr/textAppearance"
        android:id="@+id/baslik"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kullanici_adi"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:id="@+id/kullaniciAdi"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/sifre"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:id="@+id/sifre"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris"
        android:padding="25dp"
        android:id="@+id/btnGiris"
        />
</LinearLayout>